implemented-all-services-and-tests-added-frontend-design