@@ -6,8 +6,8 @@ import com.flight_booking.domain.Flight;
 import com.flight_booking.domain.Seat;
 import com.flight_booking.enums.SeatStatus;
 import com.flight_booking.exception.FlightNotFoundException;
+import com.flight_booking.exception.enums.ErrorStatus;
 import com.flight_booking.model.request.CreateSeatsRequest;
-import com.flight_booking.repository.FlightRepository;
 import com.flight_booking.repository.SeatRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -15,12 +15,12 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
-import static org.assertj.core.api.AssertionsForClassTypes.catchThrowable;
-import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.catchThrowable;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
 
@@ -40,58 +40,72 @@ class SeatServiceTest {
     private SeatRepository seatRepository;
 
     @Mock
-    private FlightRepository flightRepository;
+    private FlightService flightService;
 
     @Test
     void it_should_create_seats_for_flight() {
-        //given
-        Long flightId = 1L;
-        Flight flight = Flight.builder().id(flightId).build();
-        CreateSeatsRequest createSeatsRequest = CreateSeatsRequest.builder().build();
-        List<Seat> seats = Arrays.asList(
-                Seat.builder().flight(flight).seatStatus(SeatStatus.AVAILABLE).build(),
-                Seat.builder().flight(flight).seatStatus(SeatStatus.AVAILABLE).build()
-        );
+        // given
+        String flightCode = "TK2025";
 
-        given(flightRepository.findById(flightId)).willReturn(Optional.of(flight));
-        given(seatBuilder.build(flight, createSeatsRequest)).willReturn(seats);
+        Flight flight = Flight.builder()
+                .flightCode(flightCode)
+                .build();
 
-        //when
-        seatService.createSeatForFlight(flightId, createSeatsRequest);
+        List<Seat> existingSeats = new ArrayList<>(List.of(
+                Seat.builder().seatNumber("1A").seatPrice(BigDecimal.valueOf(100)).seatStatus(SeatStatus.AVAILABLE).flight(flight).build(),
+                Seat.builder().seatNumber("1B").seatPrice(BigDecimal.valueOf(150)).seatStatus(SeatStatus.AVAILABLE).flight(flight).build()
+        ));
 
-        //then
-        verify(seatRepository).saveAll(seats);
+        CreateSeatsRequest createSeatsRequest = CreateSeatsRequest.builder()
+                .numberOfSeats(2)
+                .seatPrice(BigDecimal.valueOf(100))
+                .build();
+
+        given(flightService.getFlightByCode(flightCode)).willReturn(flight);
+        given(seatRepository.findByFlight(flight)).willReturn(existingSeats);
+        given(seatBuilder.build(flight, createSeatsRequest, existingSeats.size())).willReturn(existingSeats);
+
+        // when
+        seatService.createSeatForFlight(flightCode, createSeatsRequest);
+
+        // then
+        verify(seatRepository).saveAll(existingSeats);
     }
+
 
     @Test
     void it_should_throw_exception_when_flight_not_found() {
-        //given
-        Long flightId = 1L;
+        // given
+        String flightCode = "TK123";
         CreateSeatsRequest createSeatsRequest = CreateSeatsRequest.builder().build();
-        given(flightRepository.findById(flightId)).willReturn(Optional.empty());
 
-        //when
-        FlightNotFoundException thrown = (FlightNotFoundException) catchThrowable(() -> seatService.createSeatForFlight(flightId, createSeatsRequest));
+        given(flightService.getFlightByCode(flightCode))
+                .willThrow(new FlightNotFoundException(ErrorStatus.FLIGHT_NOT_FOUND));
 
-        //then
+        // when
+        Throwable thrown = catchThrowable(() -> seatService.createSeatForFlight(flightCode, createSeatsRequest));
+
+        // then
         assertThat(thrown).isInstanceOf(FlightNotFoundException.class);
     }
 
+
     @Test
     void it_should_update_seat_status() {
-        //given
-        List<String> seatNumbers = Arrays.asList("A1", "A2");
-        List<Seat> seats = Arrays.asList(
-                Seat.builder().seatNumber("A1").seatStatus(SeatStatus.AVAILABLE).build(),
-                Seat.builder().seatNumber("A2").seatStatus(SeatStatus.AVAILABLE).build()
+        // given
+        List<String> seatNumbers = List.of("1A", "1B");
+
+        List<Seat> seats = List.of(
+                Seat.builder().seatNumber("1A").seatStatus(SeatStatus.AVAILABLE).build(),
+                Seat.builder().seatNumber("1B").seatStatus(SeatStatus.AVAILABLE).build()
         );
 
         given(seatRepository.findAllBySeatNumberIn(seatNumbers)).willReturn(seats);
 
-        //when
+        // when
         seatService.updateSeat(seatNumbers);
 
-        //then
+        // then
         verify(seatConverter).updateSeatStatus(seats);
         verify(seatRepository).saveAll(seats);
     }
